<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OrderMate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_check_internet">Please check Internet connection</string>
    <string name="api_exception">Api Exception is there</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="dummy_time">0:00 PM</string>
    <string name="dummy_price">$0.00</string>
    <string name="dummy_status">Open</string>
    <string name="dummy_id">1234567DDFKHVDFJK</string>
    <string name="dummy_date">5/8/24</string>
    <string name="dummy_name">Tester</string>
    <string name="orders_text">Order %1$s</string>
    <string name="dummy_heading_dashboard">Orders (DEV)</string>
    <string name="search_orders">Search Orders</string>
    <string name="load_older_orders">Load older orders</string>
    <string name="loading_older_orders">Loading…</string>
    <string name="no_older_orders_found">No older orders found</string>
    <string name="syncing">SYNCING</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="add_payment">Add Payment</string>
    <string name="re_open">Re-Open</string>
    <string name="reissue_receipt">Reissue Receipt</string>
    <string name="send_n_notification">Send \n Notification</string>
    <string name="send_n_notification_without_newLine">Send Notification</string>
    <string name="delete_order">Delete Order</string>
    <string name="placed_at">Placed at</string>
    <string name="statusString">Status</string>
    <string name="employee_name">Employee</string>
    <string name="employee_name_value">No Name</string>
    <string name="no_number">No Number</string>
    <string name="customer_name">Customer</string>
    <string name="customer_name_value">Customer: %1$s</string>
    <string name="customer_number">Customer Number</string>
    <string name="order">Items (%1$d) </string>
    <string name="order_id_value">Order #: %1$s </string>
    <string name="show_summary">Show Summary</string>
    <string name="transaction">Transactions</string>
    <string name="no_transaction">There is no transaction made for this order.</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Taxes and fees</string>
    <string name="bullet_symbol">\u2022</string>
    <string name="no_order_match">No order match the current filter and/or search item.</string>
    <string name="order_more_than_100">Order more than 100 days old will be viewed on the Web Dashboard or by search the full order id in the search.</string>
    <string name="cash">Cash</string>
    <string name="payment">Payment</string>
    <string name="source">Source/Type</string>
    <string name="order_time">Placed</string>
    <string name="date">Date</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="order_status">Status</string>
    <string-array name="order_type">
        <item>Choose Order type</item>
        <item>Pre_order</item>
        <item>Dine-In</item>
        <item>Takeout</item>
        <item>Delivery</item>
        <item>Catering</item>
    </string-array>
    <string name="order_status_string">Order Status</string>
    <string name="employee_name_header">Customer/Employee</string>
    <string name="id">Notes/Id</string>
    <string name="notes">Notes</string>
    <string name="hypen_text">-</string>
    <string name="add_note">Add Note to Item</string>
    <string name="no_value">0</string>
    <string name="pick_up_time">PickUp Date</string>
    <string name="enter_your_notes_here">Enter message for customer</string>
    <string name="update_order">Add note</string>
    <string name="cancel">Cancel</string>
    <string name="custom_menu">Custom Menu</string>
    <string name="custom_order_menu">Set Custom Option</string>
    <string name="custom_order_menus">Set Custom Options</string>
    <string name="save">Save</string>
    <string name="category">Categories</string>
    <string name="enabled">Enabled</string>
    <string name="enter_the_value">Enter the Value</string>
    <string name="add">Add</string>
    <string name="enter_value">Enter value</string>
    <string-array name="order_text_array">
        <item>All Orders</item>
        <item>Open</item>
        <item>Paid</item>
        <item>Partially Paid</item>
        <item>Refunded</item>
        <item>Partially Refunded</item>
        <item>Manually Refunded</item>
    </string-array>
    <string-array name="order_progress">
        <item>Choose Order progress</item>
        <item>In-Progress</item>
        <item>Hold</item>
        <item>Done</item>
    </string-array>
    <string-array name="order_name_array">
        <item>Chicmic</item>
        <item>Chicmic</item>
        <item>Chicmic</item>
    </string-array>
    <string-array name="order_payment_array">
        <item>All Tenders</item>
        <item>Credit Card</item>
        <item>Check</item>
        <item>Cash</item>
    </string-array>
    <string-array name="order_booking_array">
        <item>All Orders</item>
        <item>POS Order</item>
        <item>Online Orders</item>
    </string-array>
    <string name="priceString">%1$s%2$s</string>
    <string name="priceStringWithRefund">%1$s%2$s(%3$s%4$s)</string>
    <string name="getFullName">%1$s %2$s</string>
    <string name="itemCount">X%1$d</string>
    <string name="getDateWithDot">%1$s . %2$s</string>
    <string name="no_access">Notes are temporarily disabled by the admin. For assistance, please reach out to the admin.</string>
    <string name="all_tenders">All Tenders</string>
    <string name="all_orders">All Orders</string>
    <string name="all_employee">All Employee</string>
    <string name="all_type">All Type</string>
    <string name="subItemCost">%1$d %2$s @ %3$s/%4$s</string>
    <string name="key" >%1$s-%2$s-%3$s-%4$s-%5$s-%6$s</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="enter_the_customer_email_address">Enter customer email address</string>
    <string name="enter_the_customer_number">Enter customer phone number</string>
    <string name="enter_the_subject">Enter subject line for the email</string>
    <string name="send">send</string>
    <string name="choose_item_progress">Status</string>
    <string name="choose_item_type">Type</string>
    <string name="choose_item_category">Category</string>
    <string name="choose_item_subcategory">SubCategory</string>
    <string name="choose_item_description">Description</string>
    <string name="enter_pickup_date">PickUp Date</string>
    <string name="do_you_want_to_save_the_changes">Do you want to save the changes?</string>
    <string name="discard">Discard</string>
    <string name="dash">-</string>
    <string name="customer_email">Customer Email</string>
    <string name="item_count">%1$s custom items </string>
    <string name="item_count_single">%1$s custom item </string>
    <string name="note_string_pickUp" >" pickup date:%1$s "</string>
    <string name="special_char" >&#9679;</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear all</string>
    <string name="note_string_progress">" status:%1$s "</string>
    <string name="note_string_category">" category:%1$s "</string>
    <string name="note_string_Subcategory">" subcategory:%1$s "</string>
    <string name="note_string_type" >" type:%1$s "</string>
    <string name="note_string_description" >" description:%1$s "</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="enter_the_valid_email_id">Enter the valid email Id.</string>
    <string name="enter_the_valid_mobile_number">please check the number.</string>
    <string name="email_has_been_shared_successfully">Email has been Shared SuccessFully</string>
    <string name="sms_has_been_shared_successfully">Sms has been Shared SuccessFully</string>
    <string name="failed_to_share_the_email">"Failed to share the Email "</string>
    <string name="fail_to_share_the_sms">Fail to share the SMS</string>
    <string name="please_check_your_internet_connection">Please check your internet Connection</string>
    <string name="please_check_your_internet_connection_1">Internet connection is Required to use this feature.</string>
    <string name="there_is_issue_with_your_account">There is Issue with Your Account Please check the Clover Dashboard</string>
    <string name="subcategories">Subcategories</string>
    <string name="commas">", "</string>
    <string name="this_permission_is_required">This Permission is required to show the Custom Modal dialog over the Clover Register App. \n</string>
    <string name="overlay_permission">Overlay Permission</string>
    <string name="settings">Settings</string>
    <string name="type">Type</string>
    <string name="show_modal">Trigger modal when item is added to cart</string>
    <string name="show_modal_basket">Trigger modal from basket</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="customer">Customer</string>
    <string name="employee">Employee</string>
    <string name="payment_type">Payment</string>
    <string name="custom_notes">Custom Notes</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="refunded">Refunded</string>
    <string name="partially_refunded">Partial Refund</string>
    <string name="partially_paid">Partial</string>
    <string name="back">Back</string>
    <string name="items">Items</string>
    <string name="order_details">Order Details</string>
    <string name="order_date">Order Date</string>
    <string name="due_date">Due Date</string>
    <string name="order_tags">Order Tags</string>
    <string name="description">Description</string>
    <string name="view_customer">View customer details</string>
    <string name="order_history">Order History</string>
    <string name="view_all">View All</string>
    <string name="reminder_sent">Reminder Sent</string>
    <string name="sample_date_time">March 15, 2026 • 9:00 AM</string>
    <string name="sample_date_time_2">March 14, 2026 • 2:32 PM</string>
    <string name="sample_date_time_3">March 14, 2026 • 2:30 PM</string>
    <string name="payment_received">Payment Received</string>
    <string name="order_created">Order Created</string>
    <string name="sms_reminder_sent">SMS reminder sent to customer</string>
    <string name="notification">Notification</string>
    <string name="send_notification">Send Notification</string>
    <string name="discount">Discount</string>
    <string name="rush">Rush</string>
    <string name="pickup">Pickup</string>
    <string name="clover_customers_not_available">Clover Customers app not available</string>
    <string name="edit_item">Edit item</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="customer_details">Customer Details</string>
    <string name="select_template">Select Template</string>
    <string name="template">Template</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email">Enter email address</string>
    <string name="search">Search</string>
    <string name="search_customers">Search Customers</string>
    <string name="search_by_name_phone_email">Search by name, phone, or email</string>
    <string name="no_customers_found">No customers found</string>
</resources>