<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#ddf1f9">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderTime"
        style="@style/orderListStyleHeader"
        android:ems="6"
        android:text="@string/order_time"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderPrice"
        style="@style/orderListStyleHeader"
        android:ems="6"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:text="@string/payment"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderTime"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderType"
        style="@style/orderListStyleHeader"
        android:ems="6"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:text="@string/source"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/orderName"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderStatus"
        style="@style/orderListStyleHeader"
        android:ems="10"
        android:maxWidth="@dimen/_130sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:text="@string/order_status"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/orderPrice"
        app:layout_constraintBottom_toBottomOf="@+id/orderPrice"
        app:layout_constraintTop_toTopOf="@+id/orderPrice" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderName"
        style="@style/orderListStyleHeader"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:ems="11"
        android:maxWidth="@dimen/_250sdp"
        android:text="@string/employee_name_header"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/orderStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderId"
        style="@style/orderListStyleHeader"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:ems="11"
        android:text="@string/id"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/orderType"
        app:layout_constraintBottom_toBottomOf="@+id/orderStatus"
        app:layout_constraintTop_toTopOf="@+id/orderStatus"
        app:layout_constraintVertical_bias="1.0" />

<!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:id="@+id/orderNotes"-->
<!--        style="@style/orderListStyleHeader"-->
<!--        android:ems="7"-->
<!--        android:text="@string/notes"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textColor="@color/black"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/orderStatus"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/orderStatus" />-->


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        app:dividerColor="#e1e1e1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>