<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_3sdp"
    android:layout_gravity="center_horizontal"
  >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/tickImage"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_tick"
        app:layout_constraintBottom_toBottomOf="@+id/paymentDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/paymentTime" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/paymentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxWidth="@dimen/_50sdp"
        android:text="@string/dummy_time"
        android:textColor="#2c3a3f"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tickImage"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/paymentTypeImage"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_cash"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@+id/paymentTime"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/paymentModeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxWidth="@dimen/_50sdp"
        android:text="@string/cash"
        android:textAllCaps="true"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_8sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/paymentTypeImage"
        app:layout_constraintBottom_toBottomOf="@id/paymentTypeImage"
        app:layout_constraintStart_toEndOf="@id/paymentTypeImage"
         />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/paymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxWidth="@dimen/_50sdp"
        android:text="@string/dummy_status"
        android:textAllCaps="true"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/paymentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxWidth="@dimen/_50sdp"
        android:paddingBottom="@dimen/_4sdp"
        android:text="@string/payment"
        android:textColor="#bdc1c3"
        android:textStyle="bold"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="@id/paymentAmount"
        app:layout_constraintStart_toStartOf="@+id/paymentAmount"
        app:layout_constraintTop_toBottomOf="@+id/paymentAmount" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/paymentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxWidth="@dimen/_50sdp"
        android:paddingBottom="@dimen/_4sdp"
        android:text="@string/dummy_date"
        android:textColor="#bdc1c3"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@+id/paymentTime"
        app:layout_constraintTop_toBottomOf="@+id/paymentTime" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        app:dividerColor="#e1e1e1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>