<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_1sdp">

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/orderItemColor"
        android:layout_width="@dimen/_3sdp"
        android:layout_height="@dimen/_18sdp"
        app:dividerColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:ellipsize="end"
        android:maxWidth="@dimen/_130sdp"
        android:maxLines="2"
        android:paddingVertical="@dimen/_3sdp"
        android:text="@string/dummy_time"
        android:textSize="@dimen/_8sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderPrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:maxWidth="@dimen/_100sdp"
        android:maxLines="2"
        android:paddingVertical="@dimen/_3sdp"
        android:text="@string/dummy_id"
        android:textAlignment="textStart"
        android:textColor="#2c3a3f"
        android:textSize="@dimen/_8sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/addNotesButton"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintStart_toEndOf="@+id/orderItemCount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderItemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:ems="5"
        android:maxWidth="@dimen/_100sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:text="@string/dummy_date"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="#e1e1e1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>